# py_staticpage_builder

./: .gitignore  LICENSE  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  simple_http_server.py  text.txt
page_builder/: __init__.py  builder.py  config.py  data.py  minify.py
requirements/: dev.in  dev.txt  prod.in  prod.txt
src/pystaticpage/: __init__.py  builder.py  config.py  data.py  dependency.py  mimetypes.py  minifier.py  minifyhtml.py  parser.py  tasks.py  utils.py
src/staticpage/: __init__.py  build.py  data.py  parse.py  utils.py
tests/: conftest.py  ext_sample.py  helpers.py  test_build.py  test_builder.py  test_config.py  test_configuration.py  test_data.py  test_minifier.py  test_parse.py  test_parser_html.py  test_parser_markdown.py  test_utils.py  utils.py
tests/builder/: test_builder.py
tests/builder/dirs/: config.yaml
tests/builder/dirs/cdn/: timetable.css
tests/builder/dirs/data/: company.yaml
tests/builder/dirs/pages/: how-to.md  index.html
tests/builder/dirs/sass/: home.sass
tests/builder/dirs/static/css/: main.css
tests/builder/dirs/static/js/: main.js
tests/builder/dirs/templates/: blog.html
tests/builder_dirs/pages/: index.html
tests/builder_dirs/pages/blog/: 20200125.md  20200126.html
tests/builder_dirs/static/js/: index.js
tests/data/web/data/: about.toml
tests/data/web/pages/: 404.html  index.html  sitemap.xml
tests/data/web/pages/blog/: day-abc.md
tests/data/web/static/js/: site.js
tests/data/web/templates/: base  base_md
tests/dirs/: config.yaml
tests/dirs/data/: company.yml
tests/dirs/pages/: 404.html  index.html  injected_methods.html  sitemap.xml
tests/dirs/pages/blog/: somethingToSkip.html
tests/dirs/sass/: anotherthing.scss
tests/dirs/templates/: base.html  blog_template.html
tests/expected_site/: index.html  injected_methods.html
tests/expected_site/blog/: 20200125.html  20200126.html
tests/expected_site/css/: anotherthing.css
tests/parser/: test_parser_html.py  test_parser_markdown.py
tests/tasks/: conftest.py  test_build_page.py  test_build_sass.py  test_copy_cdn.py  test_copy_static.py
tests/temp/: README.md
